<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IQue</string>
    <string name="app_icon_description">App Icon Image</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_register">Register</string>
    <string name="action_login">Login</string>
    <string name="action_profile">Profile</string>
    <string name="action_anonymous_profile">Anonymous profile</string>
    <string name="action_take_test">Take Test</string>
    <string name="action_help">Help</string>
    <string name="welcome_appname_text">Hello. Welcome to IQue.</string>
    <string name="take_test_button_description">Take test button</string>
    <string name="welcome_appdescription_text">Enhance you reasoning, creativity, and imagination...</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_test_list">TestListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_testing">TestingActivity</string>
    <string name="title_activity_question_dialog">QuestionDialogActivity</string>
    <string name="USER_SETTINGS_FILE">com.ornyxoft.iqueue.USER_SETTINGS_FILE</string>
    <string name="USER_ACCESS_MODE_KEY">AccessMode</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_login">LoginActivity</string>

</resources>
