<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity" >
    <item android:id="@+id/action_register"
        android:title="@string/action_register"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_add_person"/>
    <item android:id="@+id/action_login"
        android:title="@string/action_login"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_accounts"/>
    <item android:id="@+id/action_profile"
        android:title="@string/action_anonymous_profile"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_person"/>
    <item android:id="@+id/action_take_test"
        android:title="@string/action_take_test"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_event"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_settings"/>
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_help"/>
</menu>
