<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ornyxoft.ique.ProfileActivity">
    <item android:id="@+id/action_profile"
        android:title="@string/action_home"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
    <item android:id="@+id/action_take_test"
        android:title="@string/action_take_test"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_event"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_settings"/>
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_help"/>
</menu>
